--- a/index.html
+++ b/index.html
@@ -9,9 +9,20 @@
 
 <body>
     <header>
+        <img id="foto" src="./src/image/image.png">
         <h1>Thiago Afornalli dos Santos</h1>
         <p>Estudante de Análise e Desenvolvimento de Sistemas</p>
         <p>Futuro desenvolvedor Front-end</p>
+        <br>
+        <div id="menu">
+            <a href="#about">Sobre Mim</a>
+            <a href="#experience">Experiência</a>
+            <a href="#skills">Habilidades</a>
+            <a href="#tabela">Formação Acadêmica</a>
+            <a href="#github">Projetos</a>
+            <a href="#contact">Contato</a>
+        </div>
+
 
     </header>
     <section id="about">
@@ -88,7 +99,7 @@
             </li>
         </ul>
     </section>-->
-    <section>
+    <section id="tabela">
         <h2>Formação Acadêmica</h2>
         <table>
             <thead>
